<resources>
    <string name="app_name">FLAT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  bottom_navigation  -->
    <string name="navigation_title_map">map</string>
    <string name="navigation_title_friends">friends</string>
    <string name="navigation_title_settings">settings</string>

    <!--  fragment_friend_list  -->
    <string name="no_have_friend">友だちが1人もいないようです。下のボタンから追加してみましょう！</string>
    <string name="disc_fab">友だちを追加する</string>
    <string name="unapproved_friends">未承認</string>
    <string name="friends_list">友だち</string>
    <string name="connection_error">通信エラーです。接続状況を確認してください</string>
    <string name="no_unapproved_friend">友だち申請は届いていないようです</string>

    <!--  RejectDialogFragment  -->
    <string name="dialog_message">本当に拒否しますか？間違って拒否した場合は、もう一度友だち申請をしてもらう必要があります</string>
    <string name="cancel">キャンセル</string>
    <string name="reject">拒否</string>

    <!--  fragment_add_friend  -->
    <string name="title_add_friend">友だち追加</string>
    <string name="input_user_name">検索する名前を入力してください</string>
    <string name="input_user_name_hint">例：未来太郎</string>
    <string name="apply_for_friend">申請</string>
    <string name="wait_for_approval">承認待ち</string>
    <string name="already_friend">すでに友だち</string>
    <string name="empty_text">名前を入力してください。</string>
    <string name="not_found_id">見つかりませんでした。もう一度検索してください。</string>

    <!--  Bluetooth  -->
    <string name="ble_not_supported">この端末はBeacon非対応です。</string>
    <string name="toast_bluetooth_enabled">Bluetoothがオンになりました</string>
    <string name="toast_bluetooth_disable">Bluetoothをオンにしてください</string>

    <!--  permissions  -->
    <string name="permission_background_location_message">このデバイスの位置情報へのアクセスを「FLAT」に常に許可する必要があります。</string>
    <string name="permission_background_location_positive">設定する</string>
    <string name="permission_background_location_negative">設定しない</string>

    <!--  fragment_account_registration  -->
    <string name="account_registration_title">アカウントを登録しましょう</string>
    <string name="input_nickname">ニックネームを入力してください(重複不可能、変更可能)</string>
    <string name="input_nickname_error">1文字以上10文字以下で入力してください</string>
    <string name="input_password">パスワードを入力してください(半角英数8文字以上)</string>
    <string name="input_character_error">パスワードは半角英数字で入力してください</string>
    <string name="input_password_length_error">8文字以上255文字以下で入力してください</string>
    <string name="re_input_password">パスワードを再入力してください</string>
    <string name="password_mismatch_error">パスワードが一致していません</string>
    <string name="already_used_nickname_error">その名前はすでに使用されています</string>
    <string name="register">登録する</string>
    <string name="has_account_to_login">アカウントを持っている人はログインする</string>

    <!--  fragment_login  -->
    <string name="login_title">ログイン画面</string>
    <string name="input_nickname_for_login">ニックネームを入力してください</string>
    <string name="input_password_for_login">パスワードを入力してください</string>
    <string name="to_login">ログインする</string>
    <string name="input_nickname_or_password_error">ニックネームかパスワードが間違っています</string>
    <string name="to_account_registration">アカウントを新規登録する</string>

    <!--  fragment_force_login_dialog  -->
    <string name="force_login_dialog_message">他の端末で既にログインしています。ログインしますか？(他の端末からはログアウトされます)</string>

    <!--  fragment_startup  -->
    <string name="login">ログイン</string>
    <string name="new_account_registration">新規登録</string>

    <!--  fragment_user_setting  -->
    <string name="user_setting">ユーザー設定</string>
    <string name="change_name">名前を変更</string>
    <string name="change_icon">アイコンを変更</string>
    <string name="change_status">ステータスを変更</string>
    <string name="logout">ログアウト</string>
    <string name="to_logout">ログアウトする</string>
    <string name="logout_dialog_message">本当にログアウトしますか？</string>

    <!--  fragment_name_change  -->
    <string name="decision">決定</string>
    <string name="validation_error">使用できない文字が含まれています</string>

    <!--  fragment_status_change  -->
    <string name="at_school">学校にいる</string>
    <string name="free">今暇</string>
    <string name="busy">忙しい</string>
    <string name="not_at_school">学校にいない</string>
    <string name="name_too_long">名前が長すぎます</string>
    <string name="name_empty">名前を入力してください</string>
    <string name="success">ok(tmp)</string>
    <string name="name">tmp</string>
    <string name="credit_card_number">tmp</string>
    <string name="password_too_short">パスワードは8文字以上で入力してください</string>
    <string name="password_too_long">パスワードは255文字以下で入力してください</string>
    <string name="invalid_character">使用できない文字が含まれています</string>
    <string name="password_retype_mismatch">パスワードが一致していません</string>
    <string name="empty" />

</resources>