<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.LoginFragment">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="24sp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_input_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_nickname_for_login"
        android:textSize="12sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_input_nickname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:layout_constraintStart_toStartOf="@id/tv_input_nickname"
        app:layout_constraintTop_toBottomOf="@id/tv_input_nickname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_input_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="10"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_input_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_password_for_login"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tv_input_nickname"
        app:layout_constraintTop_toBottomOf="@id/til_input_nickname" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_input_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:counterEnabled="true"
        app:counterMaxLength="255"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="@id/tv_input_password"
        app:layout_constraintTop_toBottomOf="@id/tv_input_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="255"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/to_login"
        app:layout_constraintTop_toBottomOf="@id/til_input_password" />

    <TextView
        android:id="@+id/tv_login_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/red"
        android:layout_marginTop="32dp"
        android:text="@string/input_nickname_or_password_error"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/bt_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_to_account_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/to_account_registration"
        android:textSize="14sp"
        android:textColor="@color/primary_solid"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>